compiler/tests/success/x86-64/bug_224.jazz
export
fn main(reg u64 x) {
  while {
    x -= 1;
  } (x > 0)
}
